# py-gui

./: .editorconfig  .gitignore  .pylintrc  README.md  mkdocs.yml  pyproject.toml  test.py  versions.json
.github/workflows/: build_docs.yml
1.2.x/: 404.html  index.html
1.2.x/call-reference/: index.html
1.2.x/javascript/: details.js
1.2.x/search/: search_index.json
1.3.x/: 404.html  index.html
1.3.x/call-reference/: index.html
1.3.x/search/: search_index.json
1.4.x/call-reference/: index.html
1.4.x/search/: search_index.json
1.5.x/: 404.html
1.5.x/call-reference/: index.html
1.5.x/search/: search_index.json
1.6.x/: index.html
1.6.x/call-reference/: index.html
1.6.x/javascript/: details.js
1.6.x/search/: search_index.json
docs/: call-reference.md  index.md
latest/: 404.html  index.html
latest/call-reference/: index.html
pygui/: __init__.py  elements.py  window.py
